package com.randioo.mahjong_public_server.protocol;

message SettingsRequest{	
	optional int32 volume = 1[default = 50];
	optional int32 musicVolume = 2[default = 50];
}

message SettingsResponse{
	optional int32 errorCode = 1 [default =1];
}

message SettingsShowRequest{	

}

message SettingsShowResponse{
	optional int32 errorCode = 1 [default =1];
	optional int32 volume = 2[default = 50];
	optional int32 musicVolume = 3[default = 50];
}